--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://harikagummadi582.github.io/Battleship-project/",
-  "proxy": "http://localhost:3000",
+  "homepage": "https://ronaldrommel.github.io/Battleship3/",
+  "proxy": "https://battleship3-6.onrender.com",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist -b deploy",
+    "deploy": "gh-pages -d dist -b works",
     "lint": "eslint .",
     "preview": "vite preview"
   },
